// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mode = generate: test background stack > test background is stacked in the multiple rule 1`] = `
"
      .rule-multiple-stacked {
        background: url(../images/one.png) no-repeat;
      }
      .skin .rule-multiple-stacked {background-image: url("../skin/two.png");
      }

      .rule-multiple-stacked {
        background: url(../images/two.png) no-repeat;
      }
    "
`;

exports[`mode = generate: test background stack > test background is stacked in the single rule 1`] = `
"
      .rule-single-stacked {
        background: url(../images/one.png) no-repeat;
        background-image: url(../images/two.png) no-repeat;
      }
      .skin .rule-single-stacked {background-image: url("../skin/two.png");
      }
    "
`;

exports[`mode = generate: test html and body combination > test body as prefix selector 1`] = `
"
      body .body-prefix {
        background: url(../images/one.png) no-repeat;
      }
      body .skin .body-prefix {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test html and body combination > test body follow selector as prefix selector 1`] = `
"
      body.follow .body-prefix {
        background: url(../images/one.png) no-repeat;
      }
      body.follow .skin .body-prefix {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test html and body combination > test html as prefix selector 1`] = `
"
      html .html-prefix {
        background: url(../images/one.png) no-repeat;
      }
      html .skin .html-prefix {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test html and body combination > test html body as prefix selector 1`] = `
"
      html body .html-body-prefix {
        background: url(../images/one.png) no-repeat;
      }
      html body .skin .html-body-prefix {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test html and body combination > test html follow selector as prefix selector 1`] = `
"
      html.follow .html-prefix {
        background: url(../images/one.png) no-repeat;
      }
      html.follow .skin .html-prefix {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test rule in @media > test rule in @media 1`] = `
"
    @media screen and (min-width: 1024px) {
      .media {
        background: url(../images/one.png) no-repeat;
      }
      .skin .media {background-image: url("../skin/one.png");
      }
    }
  "
`;

exports[`mode = generate: test url quotation mark > test url with double quotes 1`] = `
"
      .double-quote {
        background: url("../images/one.png") no-repeat;
      }
      .skin .double-quote {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test url quotation mark > test url with single quotes 1`] = `
"
      .single-quote {
        background: url('../images/one.png') no-repeat;
      }
      .skin .single-quote {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = generate: test url quotation mark > test url without quotes 1`] = `
"
      .non-quotation {
        background: url(../images/one.png) no-repeat;
      }
      .skin .non-quotation {background-image: url("../skin/one.png");
      }
    "
`;

exports[`mode = replace: test background stack > test background is stacked in the multiple rule 1`] = `
"
      .rule-multiple-stacked {
        background: url("../skin/one.png") no-repeat;
      }

      .rule-multiple-stacked {
        background: url("../skin/two.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test background stack > test background is stacked in the single rule 1`] = `
"
      .rule-single-stacked {
        background: url("../skin/one.png") no-repeat;
        background-image: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test html and body combination > test body as prefix selector 1`] = `
"
      body .body-prefix {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test html and body combination > test body follow selector as prefix selector 1`] = `
"
      body.follow .body-prefix {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test html and body combination > test html as prefix selector 1`] = `
"
      html .html-prefix {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test html and body combination > test html body as prefix selector 1`] = `
"
      html body .html-body-prefix {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test html and body combination > test html follow selector as prefix selector 1`] = `
"
      html.follow .html-prefix {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test rule in @media > test rule in @media 1`] = `
"
    @media screen and (min-width: 1024px) {
      .media {
        background: url("../skin/one.png") no-repeat;
      }
    }
  "
`;

exports[`mode = replace: test url quotation mark > test url with double quotes 1`] = `
"
      .double-quote {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test url quotation mark > test url with single quotes 1`] = `
"
      .single-quote {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;

exports[`mode = replace: test url quotation mark > test url without quotes 1`] = `
"
      .non-quotation {
        background: url("../skin/one.png") no-repeat;
      }
    "
`;
